Finalize Beijing post

--- a/_posts/2016-10-28-beijing.md
+++ b/_posts/2016-10-28-beijing.md
@@ -15,7 +15,7 @@ following events denoting season turnovers:
 Similar to this year's [winter--spring]({% post_url 2016-04-21-nuremberg %})
 transition, I had left Prague in late (already cold) summer and returned when
 trees turned orange.
-Thanks to my employer I went to meet my colleagues located in Beijing offices.
+Thanks to my employer I was visiting my colleagues located in Beijing offices.
 
 Spending most of my life in Europe, I experienced many novel things that are
 worth recording in this post.
@@ -23,10 +23,11 @@ worth recording in this post.
 ### Before travel
 
 I had planned to run a 10 km race the day before my departure, however, I was so
-stressed from the travel, that I gave up due to symptoms of commencing cold.
-The nervosity stemmed from: no cash, no understanding of Chinese language nor
-script, unknown environment, no control (I had to rely on pre-arranged taxi
-service) and probably travelling alone that far.
+stressed from the travel that I gave up due to symptoms of commencing cold.
+The nervousness stemmed from: no cash (juans), no understanding of Chinese
+language nor script (I knew just emergency phrases), unknown environment, no
+control (I had to rely on pre-arranged taxi service) and probably travelling
+alone that far.
 However, after I arrived, I suddenly felt healthy (and just tired) -- this way
 I learnt the travel fever is a real thing and there is no reason to worry about
 that.
@@ -39,16 +40,17 @@ that.
   * Despite I couldn't understand a word, I heart radio advertisement is same
     both in Europe and Asia.
     * Ear-drilling melodies, repetitions, creepy tone of voice
-  * *houka* similar to visa, however, for for cities.
+  * *hukou* similar to visa, however, for for cities.
     * You have to obtain that to be a full citizen of Beijing.
-    * Business reasons/work for government/education (PhD) helps.
+    * Business reasons/work for government/education (PhD.) helps.
   * Output/input corridors with arrows in metro.
   * Pointless security checks in metro (they cause queues).
 
 ### Food
 
-  * I had forgotten be scared of chopsticks before the travel. Thanks to that I
-    was able to learn using them quite quickly (despite my clumsy style).
+  * I had forgotten to be scared of chopsticks before the travel. Thanks to
+    that nothing prevented me from learning to use them quite quickly (despite
+    my clumsy style).
   * Sharing food is common, you don't have your dish on your plate.
     * Somewhere assisted with rotating tables.
   * No explicit courses, you just randomly pick food to match your taste.
@@ -70,38 +72,38 @@ that.
 
 ### Chinese style, people, culture
 
-  * Long queues at customs (not used to that in EU), alleviated when more
-    people shift began.
+  * Long queues at customs (not used to that in Schengen area), alleviated when
+    more people shift began.
   * Elevators are missing (not always) floors with digit 4 and also number 13.
   * Heavy use of smartphones (booking, maps, transport, payments) and many
-    "phone zombies".
+    "[phone zombies][zomb]".
   * Women often walk in pairs holding each other.
   * No hipsters.
-  * Tourist buses transporting people to the Olympic Park used highway instead
-    of parking lot. (Two of four lanes were completely blocked and there was a
+  * Tourist buses transporting people to the Olympic Park used highway as
+    parking lot. (Two of four lanes were completely blocked and there was a
     bottleneck where buses were turning.)
   * Evening dancing lessons on playgrounds in hutongs (mostly for older women).
     * Tai chi is exercised in parks in the morning.
   * Chinese people are very good at queueing (hard to beat them).
+
+[zomb]: https://en.wikipedia.org/wiki/Smartphone_zombie
 
 ### Sites, environment
 
   * Beijing appears to be a modern city, well organized by system of rings (the
     first ring encompasses the Forbidden City, 7th ring is being built and it's
     a highway 150 km far away from the center).
-  * *Hutongs* are traditional streets with flat houses and yards (TODO four-room house).
-    * Now they're only inside the second ring, many were destroyed in favor of
-      modern buildings.
+  * *Hutongs* are traditional streets with flat houses and yards (*siheyuan*).
+    * Now they're only inside the second ring, many were destroyed to make
+      place for modern buildings.
 
 ### Work
 
   * My first impression was relative mess on the desktops, some people even had
     gym equipment besides their tables. (I got used to that in few days.)
   * Apart from that offices appeared similar to Europe.
-  * Public toilets are often "Turkish style" (TODO) and the western restrooms
-    are missing the brush.
-  * Because of language barrier I had to use non-verbal communication more/more
-    intensively, that was exhausting (forced smiles).
+  * Public toilets are often *squat toilets* and the western restrooms are
+    missing a brush.
 
 ### Misc
 
@@ -111,11 +113,14 @@ that.
     * Especially watch out for bicycles and rikshaws who usually ride the
       places where people tend to wait for a green light.
     * Green light is not a guarantee of safe road crossing.
-  * Individual car transport is fast thanks to street grid -- out of the rush
-    hours (i.e. mostly between 10 PM and 6 AM).
-    * 5 million cars, registration plates restrictions
+  * Individual car transport is fast thanks to street grid between 10 PM and
+    6 AM (sic). Otherwise it's paralyzed by continuous rush hour.
+    * 5 million cars, registration plates restrictions (based on last digit),
+      you have to win an official lottery to be entitled for own plate.
   * I bought a bottled water in local supermarket. Despite the cap looked like
-    it has the valve, it was just that shape, no valve.
+    it had a valve, it was just that shape, no valve inside.
+  * Because of language barrier I had to use non-verbal communication more/more
+    intensively, which was exhausting (forced smiles).
 
 
 #### Jet lag
@@ -125,47 +130,56 @@ that.
 
 #### Smog
 
-  * Smog is to some extent plague of parts of Eastern China.
+  * Smog is to various extent plague of Eastern parts of China.
     * You can smell it outdoors.
   * People are used to that, they just watch particulates reports and wear
     respiration masks (they are almost a fashion item).
     * 500 ppm (~0.5 g in cubic meter) is maximum range of official instruments.
-    * My guess is 1 in 30 people wear the mask and I learnt only fraction of
-      the wear it not be contagious.
+    * My guess is that 1 in 30 people wear the mask. (They don't wear it not to
+      be contagious.)
   * It limits visibility and sunlight.
 
 #### Contrasts
 
-  * hotel limo vs Airport express, 20 times more expensive
+  * Hotel limo vs Airport express, 20 times more expensive.
   * Narrow, crooked streets adjacent to the Central Banking District.
   
 
 ### Kanji characters I learnt
 
-  * one ---
-  * water (star-like, splash) 水
-    * it's radical e.g. in the juice word (TODO)
-  * person   ^ 人
-  * boil -- box three lines
-  * self -- box four lines 自
-  * river JII
-  * mouth (square)
-  * north (Bei, sledge)
-  * fire 火
-  * king (wang) 王
-  * of (possesive suffix) 的 [de]
-  - sky 天
-  - gate 门
-  - big [do] 大
-  - small [xiao] 小
-  - tree [mú] 木
-  - forest [lín] 林
-  - people
-  - cycle/time [huí] 回
-  - east [dong] 东
-  - south [nan] 南
-  - middle/center [zhong] 中
-  - thread/line  TODO
-  - city/market [shì] 市
-  - ultra/super/really [chao] 超
+It is easier to learn reading Chinese than to speak/understand it.
+
+meaning | character | sound
+--- | --- | ---
+one | 一 |
+two | 二 |
+three | 三 |
+water | 水 |
+juice | 汁 |
+person | 人 |
+crowd | 众 |
+<del>boil</del> | <del>box three lines</del> |
+self | 自 |
+river | 川 |
+exit (outside direction) | 出
+into | 入 |
+mouth | 口 |
+north | 北 | bei
+east  | 东 | dong
+south | 南 | nan
+capital city | 京 | jing
+fire | 火 |
+king  | 王 | wang
+of (possessive suffix) | 的 | de
+sky | 天 | tian
+gate | 门 | men
+big | 大 | do
+small | 小 | xiao
+tree | 木 | mú
+forest | 林 | lín
+cycle/time | 回 | hui
+middle/center | 中 | zhong
+thread/line | 线 |
+city/market | 市 | shi
+ultra/super/really | 超 | chao
 
