WW2 movies publish

--- a/_posts/2015-10-27-zelenka.md
+++ b/_posts/2015-10-27-zelenka.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Ztraceni v Mnichově (movie)
-tags: culture
+tags: culture movie
 ---
 
 **Warning: Stop reading if you haven't seen the movie yet! Really, you should
