--- a/_posts/2016-10-28-beijing.md
+++ b/_posts/2016-10-28-beijing.md
@@ -37,7 +37,7 @@ that.
 
   * Very poor knowledge of English
     * I couldn't chat even about weather with a taxi assistant.
-  * Despite I couldn't understand a word, I heart radio advertisement is same
+  * Despite I couldn't understand a word, I heard radio advertisement is same
     both in Europe and Asia.
     * Ear-drilling melodies, repetitions, creepy tone of voice
   * *hukou* similar to visa, however, for for cities.
