--- a/_posts/2017-01-14-capital.md
+++ b/_posts/2017-01-14-capital.md
@@ -6,13 +6,13 @@ tags: book economy economics Marx
 
 Reading period: Feb 2016--Dec 2016
 
-Despite the period I spent with this book (often I felt it's preventing me from
+Despite the time I spent with this book (often I felt it's preventing me from
 reading a better book), I did not finish it (as per ebook reader estimator, I
-spent net ~40 hours reading it).
+spent net ~40 hours reading it, and ~3 hours on this report).
 
 The report about this book consists of: summary of presented ideas, notes on
 form and language and then semi-annotated excerpts from the English
-publication.
+publication. 
 
 ## Summary
 
@@ -82,16 +82,16 @@ publication.
 
 ## Form
 
-  - antisemitism
-  - opposition: moneybags, bourgeois brain
   - frequent quotations
     - other economists: Stuart Mill, James Mill, Adam Smith, Locke
       - Political Economy
     - social reports
     - statistics
     - even bible
+  - antisemitism
+  - opposition: moneybags, bourgeois brain
   - no gender neutral pronouns, mostly male
-    - one quotation treats capital as femininum (TODO)
+    - one quotation treats capital as femininum 
 
 ## Contents
 
@@ -913,7 +913,7 @@ in Austria in 1860, for children between 14 and 16,
 - interesting, not only capitalists are evil
 
 > Hence, e.g., in 1860 a great strike among the ribbon-weavers of Coventry.
-- TODO look up if it is still important event in today's literature 
+- No relevant notes on first page of Google results in 2017.
 
 > In the workshops under the Factory Acts, piece wages become the general rule,
 > because capital can there only increase the efficacy of the working day by
@@ -1022,7 +1022,9 @@ in Austria in 1860, for children between 14 and 16,
 > But this prejudice was first established as a dogma by the arch-Philistine,
 > Jeremy Bentham, that insipid, pedantic, leather-tongued oracle of the
 > ordinary bourgeois intelligence of the 19th century.
-- What a language! (TODO Who was it?)
+- What a language about [Jeremy
+  Bentham](https://en.wikipedia.org/wiki/Jeremy_Bentham), the founder of
+  utilitarianism.
 
 #### Chapter 25: The General Law of Capitalist Accumulation
 
@@ -1056,7 +1058,3 @@ in Austria in 1860, for children between 14 and 16,
   * Chapter 32: Historical Tendency of Capitalist Accumulation
   * Chapter 33: The Modern Theory of Colonisation
 
-## Quotes
-
-TODO metadata, layout of book
-- it took me so long, that I want to have a persistent record
