--- a/_posts/2017-04-13-villani.md
+++ b/_posts/2017-04-13-villani.md
@@ -1,25 +1,18 @@
 ---
 layout: post
+title: Cédric Villani, Of triangles, gases, prices and men (lecture)
 tags: maths lecture culture
-title: TODO Of triangles, gases, prices and men
 ---
 
-- 2017-04-13
-- sponsored by K. Janeček
-- LibreOffice on MacOS
-- use of French quotes in presentation
-- Bolzano Lectures series (not in France)
-  - Bičák boasts about Bolzano
-  - how Bolzano read Euclid's Foundations and was cured
-  - also A. Lincoln read Euclides
+## Content
 
-- Leather of Shallows (Challot)??
-  - can see thing only through a mirror
+### Curvature of spaces
+- [The Lady of Shalott](https://nl.wikipedia.org/wiki/William_Maw_Egley)
+  - can only see thing through a mirror
 - Riemann Hypothesis
-  - [ilbert]
   - relation to prime numbers
-  - and also eigenvector of matrix describing large atoms
-  - in practice it's true (not proof, cf. physics, economics)
+  - and also eigenvector of matrix describing large atoms (similar with [bus drivers](https://arxiv.org/pdf/nlin/0001015.pdf))
+  - in practice it's true (not proof, cf physics, economics (joke))
 - how to become famous mathematician
   - prove great theorem
   - find great problem
@@ -29,8 +22,10 @@ title: TODO Of triangles, gases, prices and men
 - hyperbolic stitching
   - constant negative curvature
 - Poincaré: the art of giving same name to different things
-- Richi curvature (cf general relativity)
-- .. the slow mastering of chance section ..
+- Ricci curvature (cf general relativity)
+
+## Slow mastering of chance
+
 - Boltzmann
   - sect of people visiting Boltzmann's grave
   - connection to statistics
@@ -44,16 +39,20 @@ title: TODO Of triangles, gases, prices and men
 - Adolphe Quetelet -- popularized law of random causes
 - Francis Galton (if Greeks had known that law, they'd have personified it)
 - Claude Channon
-  - draft: information or uncertainity
-  - rework by von Neuman: entropy
+  - draft: information or uncertainty
+  - rework by von Neumann: entropy
 - entropy
   - number of combinations is out of this world, so logarithmize it
   - vacuum doesn't suck, it's power of statistics
-  - Disorder and information is better than order and disinformation (about broadcasting company)
+  - "Disorder and information is better than order and disinformation" (about a
+    broadcasting company)
 - partial differential equations
   - Navier-Stokes equations are popular in Holywood industry
 - maximum entropy -- law of errors
   - a Boltzmann's equation for homogenous gas (is not homogenous)
+
+
+### Optimization problems
 - Cercignani Conjecture
   - Toscani, Villani
   - "Simple to state, difficult to prove. As you like it."
@@ -67,17 +66,31 @@ title: TODO Of triangles, gases, prices and men
   - Monge-Kantorovich
     - min-max flow theorem?
     - the theorem looks like maximization of capitalistic profit
-- ..conclusion of topics..
+
+### Synthesis
+- conclusion of topics
   - prices (optimization)
   - shapes of triangles (geometry)
   - entropy (statistics)
 - coworkers
   - Felix Otto, John Lott
-  - visiting in USA, no duties, just goindǵ to lunch and socialize -- it cost him fortune
+  - visiting in USA, no duties, just going to lunch and socialize -- it cost
+    him fortune
 - the lazy gas experiment
   - initial and final state of gas
-  - optimize way it transitions
-  - simlar to movement in curved space
+  - optimize the way it transitions
+  - similar to movement in curved space
 - Optimal transport, old and new (1000 pages book by him)
 - new theorem every month
 - importance of random encounters for research
+
+## Meta
+- sponsored by K. Janeček
+- LibreOffice on MacOS
+- use of French quotes in presentation
+- Hilbert pronunciation [ilbert]
+- Bolzano Lectures series (not in France)
+  - Bičák boasts about Bolzano
+  - how Bolzano read Euclid's Foundations and was cured
+  - also A. Lincoln read Euclides
+
