--- a/_drafts/1997.md
+++ b/_drafts/1997.md
@@ -16,4 +16,10 @@ Inspired by book TODO
 - sports
   - running
   - cycling
+- transport
+  - roads (highways)
+  - cars
+  - trains
+- childcare
+  - going to school unattended
 
