--- a/_posts/2017-05-31-ddia.md
+++ b/_posts/2017-05-31-ddia.md
@@ -1,15 +1,19 @@
 ---
 layout: post
-title: Designing Surveillance-Intensive Applications.
+title: Designing Surveillance-Intensive Applications (book)
 tags: [book, 'distributed systems']
 ---
 
 Reading period: Feb 2017--May 2017
+
 Designing Data-Intensive Applications. Martin Kleppmann. O'Reilly 2017 (preprint version)
 
 - a gift from O'Reilly at FOSDEM 2017
 - like Distributed Systems by Tannenbaum but with more real-world examples and
   application explanation
+
+
+## Brief notes
 
 - startups
   - quick iteration of features (rather than scalability)
@@ -19,24 +23,24 @@ Designing Data-Intensive Applications. Martin Kleppmann. O'Reilly 2017 (preprint
   - lack joins, encourage denormalization
 
 - log based structures
-  - TODO LSM trees
+  - **TODO** LSM trees
   - append only, databases
 
 - OLTP vs OLAP (transactions vs analytics)
   - kingdom of RDBMSs
 
 - RPC
-  - design flaw that tris to hide inherent drawbacks of network (unreliabiality, latency, repeated delivery)
+  - design flaw that tris to hide inherent drawbacks of network (unreliability, latency, repeated delivery)
   - SOAP (reliance on scaffolders, API generators)
 
-- "For a successsful technology, reality must take precedence over public relations, for nature cannot be fooled." by Feynman
+- "For a successful technology, reality must take precedence over public relations, for nature cannot be fooled." by Feynman
 
 - mobile clients -- extreme of distributed systems
   - "As the rich history of broken calendar sync implementations demonstrates,
     multi-leader replication is a tricky thing to get right."
   - work in disconnected mode (very long latency)
 
-- TODO stages of consistency
+- **TODO** stages of consistency
   - total ordering
   - causal ordering
   - reading your writes
@@ -52,11 +56,11 @@ Designing Data-Intensive Applications. Martin Kleppmann. O'Reilly 2017 (preprint
     - various assumptions (e.g. availability of random numbers)
     - most algorithms assume a single node can process all data (should it be necessary)
 
-- end-to-end contraints
+- end-to-end constraints
   - request ID to eliminate write skew(?)
 
 - immutability FTW
-  - except for data retency regulations
+  - except for data retention regulations
     - moral aspects of data processing (data = exhaust (cf. environmentalism) , s/data/surveillance/)
     - asymmetric relation between a user and service (cf. employee and employer)
       - social cost of not using social networking service
@@ -84,7 +88,7 @@ Designing Data-Intensive Applications. Martin Kleppmann. O'Reilly 2017 (preprint
   - Unix philosophy (utilities + pipes)
   - idea of piping e-mail account and shopping history to a data analytics tool
   - convergence of Map-Reduce and stored procedures in RDBMS (MPP?)
-  - stream processing (dual problem to RDBMS -- static query, ephemer data)
+  - stream processing (dual problem to RDBMS -- static query, ephemeral data)
 
 - "People often specialize in one particular niche of technology, and remain unaware of the requirements that exist in other niches."
 
