--- a/_posts/2017-06-30-100man.md
+++ b/_posts/2017-06-30-100man.md
@@ -1,14 +1,23 @@
 ---
-title: 
+title: Hundraåringen (book)
 layout: post
-tags: book
+tags: book culture
 ---
 
 Reading period: Week 2 and 3 of June 2017
 
+Stoletý stařík, který vylezl z okna a zmizel. Jonas Jonasson. Panteon 2012 (Czech ebook)
+
+It was an easy reading, one could partially identify with the main hero
+(because of perceived history and adventurous nature) and some moments were
+funny indeed. On the other hand there was no deeper thought in the book (or I
+did not find it).
+
+**Spoiler alert** The text below contains details of the plot and characters.
+
 ## Plot
-Born in 1905, maps 20th century
-Begins and ends in 2005
+Born in 1905, maps 20th century (mostly middle half (-XX-))
+The story begins and ends in 2005
 
 ## Characters
 - Alan Karlsson
@@ -25,7 +34,7 @@ Begins and ends in 2005
 - bad boss
 - police inspector
 - attorney (procurator?)
-  - caricature with exagerrated traits (imaginating the Book of justice)
+  - caricature with exaggerated traits (imagining the Book of justice)
 - historical leaders/personalities
   - General Franko
   - Oppenheimer
@@ -42,7 +51,7 @@ Begins and ends in 2005
   - I don't know more capitalistic land than Cuba.
   - Churchill: Public toilettes are socialism!
   - Czechoslovakia asked SU to help with interior affairs.
-- devalving the Bible
+- devaluating the Bible
   - scholar's brother have to read whole book to find out just the last sentence was wrong
 - everyone's (common) desire to have an exceptional life -- realized by Alan
 - Alan being sterilized (in the end broken)
@@ -53,7 +62,7 @@ Begins and ends in 2005
   - when 100man's story did not sell, find another garbage to write about
 - liquidation of dead bodies
   - no DNA verification (bomb on market)
-- embassy function as reward/bribe
+- embassy functions as reward/bribe
 - large jumps: "After fifteen years on a camp bed..."
 - Swedish social system
   - Alan returned his pension money back to authorities
