Exit game: finalize

--- a/_posts/2017-02-20-exit-game.md
+++ b/_posts/2017-02-20-exit-game.md
@@ -1,3 +1,10 @@
+---
+layout: post
+title: Exit game
+tags: entertainment puzzlehunt
+hidden: true
+---
+
 - room with artifacts
 - not much parallelization, straighforward what to do
 - not so clear how to do it -- fun
