MidiLidi: grammar check

--- a/_posts/2016-11-08-midilidi.md
+++ b/_posts/2016-11-08-midilidi.md
@@ -39,8 +39,8 @@ Prague artists and intellectuals.
 
 ## Audience
 
-- Most people around my age, skewed to olders.
+- Most people around my age, skewed to the olders.
 - People without collars were dancing (I had a polo shirt so I didn't dance :-).
   - Music and Midi Lidi supported the dance.
 - A guy decided to "swim" on people's hands. I was afraid he'd get above me, it
-  happened and he felt down :-p
+  happened and he fell down :-p
