Muna: update link to wikipedia

--- a/_posts/2017-11-19-bronto.md
+++ b/_posts/2017-11-19-bronto.md
@@ -22,7 +22,7 @@ the weekend and as a bonus socialization with new people.
     poeple associated with the articles and those articles are associated with
     several localities in their neighborhood.
 * history of the region
-  * mysterious Muna object (TODO link to English wiki page)
+  * mysterious [Muna object](https://en.wikipedia.org/wiki/Muna_(Mikulovice))
 * internal freedom
   * I always considered freedom as the relation of an acting individual and
     environment but one may be also constrained internally.
