--- a/_posts/2018-02-21-blanik.md
+++ b/_posts/2018-02-21-blanik.md
@@ -9,21 +9,22 @@ not read this before if you want to enjoy all the details of the movie!**
 
 ## Plot
 
-Antonín Blaník runs for presidency. Initially, he is not very successful in his
-campaign but he starts with simple phrases and populist claims and collects
-sufficient number of signatures to apply for the elections.  Unfortunately, his
-assistant is hijacked by unknown agents when he is about to deliver the
-documents. Then we are presented with the real reason behind his candidature.
-As a president he could make a gargantuan deal with Chinese -- selling them the
-Czech state and keeping all the money. Because he cannot be the president
-himself he forces other candidates to sign a contract ensuring the Chinese
-deal. The only exception is the incumbent president who is not supposed to win
-the elections. Turnover comes when a ghost of Václav Havel persuades Blaník not
-to sell the Czech Republic -- so Blaník has to support the current president
-Miloš Zeman. Later Blaník realizes that the state property is already sold --
-to Russians (by his fellow lobbyist Libor), he decides to save the Czech crown
-jewellery and escape from the Czech Republic. In the final scene, his
-patriotism overweights and he decides to stay.
+Antonín Blaník runs for presidency. Initially, he is not very successful with
+his campaign but he starts using simple phrases and populist claims and
+collects sufficient number of signatures to apply for the elections.
+Unfortunately, his assistant is hijacked by unknown agents when he is about to
+deliver the application. Then we are presented with the real reason behind
+Blaník's candidature.  As a president he could make a gargantuan deal with
+Chinese -- selling them the Czech state and keeping all the money. Because he
+cannot be the president himself he forces other candidates to sign a contract
+ensuring the Chinese deal regardless the potential winner. The only exception
+is the incumbent president who is not supposed to win the elections. Turnover
+comes when a ghost of Václav Havel persuades Blaník not to sell the Czech
+Republic -- so Blaník has to support the current president Miloš Zeman. Later
+Blaník realizes that the state property is already sold -- to Russians (by his
+fellow lobbyist Libor), he decides to "save" the Czech crown jewellery and
+escape from the Czech Republic. In the final scene, his patriotism overweights
+and he decides to stay.
 
 ## Characters
 
@@ -36,16 +37,18 @@ patriotism overweights and he decides to stay.
 ### Luboš "Žížala" Havránek
 
   * he does all the hard work
-  * he defects and collaborates with Prague café
+  * he defects and collaborates with *Prague café*
+    * this is not much relevant later in the plot
 
 ### Lenka "Lenka" Knytlová/Bartošová
 
-  * she produces little useful ideas and keeps the "team" together
+  * she produces small useful ideas and keeps the "team" together
   * she needs to take care of her son
 
 ### Libor
 
-  * another lobbyist, we never see him
+  * another lobbyist, Blaník's "friend"
+  * we never see him
 
 ### President candidates
 
@@ -57,7 +60,8 @@ patriotism overweights and he decides to stay.
 
 ### Prague café
 
-  * a [strawman](https://en.wikipedia.org/wiki/Straw_man) created by Miloš Zeman's public speaker
+  * a [strawman](https://en.wikipedia.org/wiki/Straw_man) created by Miloš
+    Zeman's public speaker
     * represents the opposition to Miloš Zeman, often depicted as Prague artists
   * they behave like a sect praising Václav Havel
   * initially they oppose Blaník, later they somehow disappear
