--- a/_posts/2017-08-03-bulgaria.md
+++ b/_posts/2017-08-03-bulgaria.md
@@ -152,6 +152,7 @@ tags: travel Bulgaria Serbia Hungary mountains
 - distorted estimate of inclination
 
 
+*Big thanks to my friends for the photos.*
 
 
 
