Mallorca: finalize+photos

--- a/_posts/2018-04-04-mallorca.md
+++ b/_posts/2018-04-04-mallorca.md
@@ -9,6 +9,9 @@ tags: travel Spain Milan Mallorca mountains island
   * track: [Serra de Tramuntana](https://en.mapy.cz/s/2zEX4) + [torrent de Pareis](https://en.mapy.cz/s/2zEVC)
   * total walking distance 109 km, highest Puig de Massanella (1364 m), lowest sea beaches (0 m)
 
+{:.thumbnail}
+[![Outlook from Moleta de s'Esclop](/resources/mallorca-scenery.jpg)](/resources/mallorca-scenery.jpg)
+
 ### Day 00 (2018-03-28)
 
   * **daily stats:** 600 km + 890 km by airliner
@@ -96,62 +99,96 @@ tags: travel Spain Milan Mallorca mountains island
 
 ## Practicals
 
-* TODO water where
+* Ryanair has hard seats (and no vomit bags), Wizzair is softer (and thus bags); leg space is borderline in both
+* path marking
+  * red+white band is the main color
+  * signposts (small (column), big (pointers))
+  * barriers (twigs, stones)
+    * took us some time until we learnt leveraging those
+  * drawings: arrows, red circles
+* possible to sleep without tent
+* Bellver areal closes in the night (~21:30)
+* Kiwi.com
+  * necessary to reclaim & checkin our baggage during transfer in Bergamo
+  * they messed check-in for our last flight -> we had to pay the fee of 35€ for airport checking
+  * kudos to them how easily we could file a complaint online and how smoothly they reimbursed us
+* water
+  * generally no problems (March/April)
+  * south of Soller there were enough opportunities in towns and villages
+  * north of Soller there war also springs and public pipes
 
 ## Natural sights
 
+* gusts of wind
+  * calm periods interrupted with gusts that gradually increased in intensity (~10 seconds) and then faded out
+* no dew
+* torrent de Pareis gorge
+* cacti, succulents and palms both in gardens and in the wild
+
 ## Manmade sights
+
+* terraced gardens (olive trees)
+* deserted houses/huts
+* lemon and orange tree orchards
+* charcoal kiln platforms (signs of earlier times economy)
+* frequent graffiti of Antifa Stuttgart
+  * the drawings are quite contrasting in native(?) rural areas
+* interesting generalization of statistics
+  * mean minimizes sum of deviation squares (2)
+  * median minimizes sum of absolute deviations (1)
+  * modus minimizes sum of zeroth power of deviations (0, where $0^0 := 0$)
+  * *that's why I like travelling with STEM folks*
+* underground bus and train terminal in Palma de Mallorca (Plaça d'Espanya)
+* nonsensical(?) stony barriers/walls (in the mountains)
+* water distributing cars (cisterns)
+  * they are
 
 ## People
 
-## Equipment
-
-
-## Equipment
-
-## Lessons learnt
-- better ID than passport (both)
-* not do everything on the very last moment
-
-## Random thoughts?
-* Osprey Talon II 33 l fits comfortably into 20x40x55 cm box required by most (low-cost) airlines
-* Ryanair has hard seats (no vomit bags), Wizzair is softer; leg space is borderline in both
-* Easter festival (TODO)
-  * Ku-klux-klan alike
+* [Easter festival](https://en.wikipedia.org/wiki/Holy_Week_in_Spain)
+  * Ku-klux-klan [alike](https://en.wikipedia.org/wiki/Capirote)
   * various groups march, music, candles, children collecting wax
   * much stronger religion traditions
-* attractive receptionist (but poor English speaker)
-* happy Mexican 
-* spicy beer
-* beer size
-* German pensioners
+
+{:.thumbnail}
+[![Brotherhood march during the Holy Week](/resources/mallorca-brotherhood.jpg)](/resources/mallorca-brotherhood.jpg)
+
+* exclusively road cyclists (the only MTB we saw had an electric engine)
+* German pensioners (and tourists)
   * silent but everywhere (buses, restaurants, streets)
-* 17th Bundesland
-* terraced gardens (TODO orchards?), desert houses/huts
-* gasps of wind
-* no dew
+  * Mallorca is nicknamed the 17th Bundesland
+* children playing football at squares (in every town)
+* community grilling (park infrastructure)
+* runner herds
+* individuals 
+  * attractive receptionist (but poor English speaker)
+  * happy Mexican 
+  * a German guy with guidebook
+  * Czech-speaking shopkeeper in Deia
+  * skilled receptionist (mainland Spaniard but looked like a Mexican)
+  * snoring "Indian", he was the only one who slept in the bedroom
+
+## Food
+
+* spicy beer (in Mexican restaurant)
+* beer size (normal size is 0.3 l which is confusing for Czechs)
+* bitter olives (advertised as Mallorquian style)
+  * it's [natural](https://en.wikipedia.org/wiki/Oleuropein)
+* pastry
+  * **empanadas mallorquinas**
+    * tasty and filling combination of puff dough and meat (also combined with pea and carrot)
+  * [coca de patata](https://ca.wikipedia.org/wiki/Coca_de_patata)
+  * [empanada](https://en.wikipedia.org/wiki/Empanada)
+
+## Equipment
+
+* Osprey Talon II 33 l fits comfortably into 20x40x55 cm box required by most (low-cost) airlines
+
+## Lessons learnt
+
+* better ID than passport (both)
+* not do everything on the very last moment
 * missing summer equipment
   * cap, sun glasses, sun cream
-* bitter olives
-* children playing football at squares (in every town)
-* TODO milíře
-* food
-  * coque de patata
-  * empanadas, placky,...
-* native rural areas vs Antifa Stuttgart
-* path marking
-  * barriers
-  * signposts (small, big)
-  * drawings: arrows, red circles
-  * red+white band is the main color
-* eat protein (TODO task)
-* Czech-speaking shopkeeper in Deia
-* exclusively road cyclists
-* commuity grilling
-* possible to sleep without tent
-* skilled receptionist (mainland Spaniard but looks like a Mexican)
-* snoring "Indian", he was the only one who slept in the bedroom
-* Belveder areal closes in the night (~21:30)
-* no Kiwi check-in
-* mean, median and modus as moments
-* underground bus and train terminal
+
+*Big thanks to my friends for the photos.*
