--- a/_posts/2018-04-04-mallorca.md
+++ b/_posts/2018-04-04-mallorca.md
@@ -116,6 +116,7 @@ tags: travel Spain Milan Mallorca mountains island
   * generally no problems (March/April)
   * south of Soller there were enough opportunities in towns and villages
   * north of Soller there war also springs and public pipes
+* total cost (travel, food, accommodation) ~ 350 EUR
 
 ## Natural sights
 
