--- a/_posts/2018-08-04-austria.md
+++ b/_posts/2018-08-04-austria.md
@@ -15,7 +15,7 @@ tags: travel Austria Germany mountains cycling
     * length units definition on the townhall
     * message about unnamed Czech princes who came to ask for catholicism(?)
     * bridge "spammed" with locks
-  * unexpected memorial of [Walhalla][https://de.wikipedia.org/wiki/Walhalla]
+  * unexpected memorial of [Walhalla](https://de.wikipedia.org/wiki/Walhalla)
     * mistaken for a Nazi architecture, it actually precedes that era and was
       built by Ludwig I. of Bayern to celebrate famous Germans
     * crowded with picnicking people with nice outlook on the Danube
@@ -28,6 +28,10 @@ tags: travel Austria Germany mountains cycling
   * morning bath in the Danube
     * mud -- no clear boundary between liquid and solid bed
   * heatwave -- after 30 km ride exhausted
+
+{:.thumbnail}
+[![Weather that makes one want a train](/resources/2018-two-pass/heatwave-donau.jpg)](/resources/2018-two-pass/heatwave-donau.jpg)
+
   * low moral after lunch in Straubing
     * after great discussions decision to take train
     * the best price is to Passau (and the train is air-conditioned too)
@@ -41,9 +45,6 @@ tags: travel Austria Germany mountains cycling
   * evening ride is much better (lower temperature)
   * evening socialization with our hosts who offered sleeping at their garden
     and provided us with dinner (happened never before!)
-
-{:.thumbnail}
-[![Weather that makes one want a train](/resources/2018-two-pass/heatwave-donau.jpg)](/resources/2018-two-pass/heatwave-donau.jpg)
 
 ### Day 03 (2018-07-31)
 
@@ -87,6 +88,10 @@ tags: travel Austria Germany mountains cycling
   * day of primary climb
   * because of rainy forecast we set alarm clock early (~6:15) and successfully departed
   * detour around Grimming (>2000 m, clouded top)
+
+{:.thumbnail}
+[![Morning Grimming](/resources/2018-two-pass/grimming.jpg)](/resources/2018-two-pass/grimming.jpg)
+
   * training glider pilot in the valley of the Enns
   * Sölkpass (1790 m)
     * the first stage is easy with nice looks at the houses spread along the
@@ -98,9 +103,6 @@ tags: travel Austria Germany mountains cycling
   * tea break in Murrau(?)
 
 {:.thumbnail}
-[![Morning Grimming](/resources/2018-two-pass/grimming.jpg)](/resources/2018-two-pass/grimming.jpg)
-
-{:.thumbnail}
 [![Sölktal road](/resources/2018-two-pass/soelktal.jpg)](/resources/2018-two-pass/soelktal.jpg)
 
 ### Day 06 (2018-08-03)
@@ -109,7 +111,7 @@ tags: travel Austria Germany mountains cycling
   * **daily stats:** 94.6 km, 5:46:26, max 57.46 km/h
   * descent "along" the Mur river
     * actually quite many little climbs
-  * crossing the track of the [Transcontinental Race][https://www.transcontinental.cc/controlstcrn06]
+  * crossing the track of the [Transcontinental Race](https://www.transcontinental.cc/controlstcrn06)
     * groups of road cyclist with light camp baggage 
   * lunch break in Judenburg, collecting energy for the secondary climb
   * Hirschegger Sattel (1543 m)
