--- a/_posts/2018-04-04-mallorca.md
+++ b/_posts/2018-04-04-mallorca.md
@@ -76,7 +76,7 @@ tags: travel Spain Milan Mallorca mountains island
   * **sleeping:** Palma, (same) hostel
   * reached Lluc monastery (water, toillet, food)
   * taking bus to Sa Calobra beach
-    * picturesque road with many hairpins full of cyclists
+    * picturesque road with many hairpins full of [cyclists]({% post_url 2019-03-31-mallorca %})
     * the bus driver gracefully handled encounters with other vehicles in
       opposite direction (or the right of more mass?)
   * the beach and lagoon is a crowded place, the farther we went into the
