--- a/_posts/2019-03-31-mallorca.md
+++ b/_posts/2019-03-31-mallorca.md
@@ -46,6 +46,9 @@ tags: Spain Mallorca bicycle island travel
   * arrival to Lluc monastery, it is emptier than I expected (later people come
     out, they are accomodated there)
 
+{:.thumbnail}
+[![Climb to Coll des Puig](/resources/2019-mallorca/puig.jpg)](/resources/2019-mallorca/puig.jpg)
+
 ### Day 02 (2019-03-29)
 
   * **daily stats:** 113 km, +769 m, -1091 m
@@ -65,6 +68,9 @@ tags: Spain Mallorca bicycle island travel
   * necessary shopping due to minerals (salt) deficiency
   * evening ride is easier, harder looking for a sleeping place (many lands are
     private)
+
+{:.thumbnail}
+[![Stain and stainless in Portocristo](/resources/2019-mallorca/stainless2.jpg)](/resources/2019-mallorca/stainless2.jpg)
 
 
 ### Day 03 (2019-03-30)
@@ -86,6 +92,9 @@ tags: Spain Mallorca bicycle island travel
     the bike a cycled the coastal cycling path
     * tourist hell (hotels, beaches, shops)
     * unexperienced e-bikes riders in narrow turns
+
+{:.thumbnail}
+[![Outlook from Puig de Randa](/resources/2019-mallorca/randa.jpg)](/resources/2019-mallorca/randa.jpg)
 
 ### Day 04 (2019-03-31)
 
