--- a/_posts/2018-12-05-tenerife.md
+++ b/_posts/2018-12-05-tenerife.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Swimming St. Nicolaus
+title: St. Nicolaus swim
 tags: travel Spain Tenerife mountains sea island
 ---
 
@@ -31,6 +31,10 @@ tags: travel Spain Tenerife mountains sea island
   * ascent from Orotava to Caldera
   * ranger using hood of his truck for cargo -- it worked because he only climbed
 
+{:.thumbnail}
+[![Morning in acampada](/resources/2018-tenerife/morning.jpg)](/resources/2018-tenerife/morning.jpg)
+
+
 ### Day 02 (2018-11-30)
 
   * **daily stats:** 17 km walk (9:00--17:00), 1188--2248; 42 km drive
@@ -41,6 +45,10 @@ tags: travel Spain Tenerife mountains sea island
   * descent through trodden "conduits" in [tuff](https://en.wikipedia.org/wiki/Tuff)
   * evening drive to San José
   * night sky with Milky Way and plethora stars
+
+{:.thumbnail}
+[![Sea inversion](/resources/2018-tenerife/inversion.jpg)](/resources/2018-tenerife/inversion.jpg)
+
 
 ### Day 03 (2018-12-01)
 
@@ -68,6 +76,8 @@ tags: travel Spain Tenerife mountains sea island
     * shopping in Chío
   * packing for the main climb the next day
 
+{:.thumbnail}
+[![Coast near Masca](/resources/2018-tenerife/coast.jpg)](/resources/2018-tenerife/coast.jpg)
 
 ### Day 04 (2018-12-02)
 
@@ -105,6 +115,9 @@ tags: travel Spain Tenerife mountains sea island
   * evening drive to Las Calderatas
   * we are accumulating garbage and too much food in the car
 
+{:.thumbnail}
+[![Teide](/resources/2018-tenerife/teide.jpg)](/resources/2018-tenerife/teide.jpg)
+
 ### Day 06 (2018-12-04)
 
   * **daily stats:** 4 km (afternoon walk), 465--590 km; 160 km drive
@@ -115,6 +128,9 @@ tags: travel Spain Tenerife mountains sea island
   * San Adreas -- artificial beach (sand from Sahara), last swimming
   * Laguna -- big city, historical center
   * night drive over Teide plateau
+
+{:.thumbnail}
+[![Dragonera in Laguna](/resources/2018-tenerife/laguna.jpg)](/resources/2018-tenerife/laguna.jpg)
 
 ### Day 07 (2018-12-05)
 
@@ -128,26 +144,28 @@ tags: travel Spain Tenerife mountains sea island
 
 ## Practicals
 
-  * vineyards, highways, hairpins/sharp turns
-  * kanarskeostrovy.com
-  * UTC+0, don't know
+  * types of roads: (steep) vineyards, highways, hairpins/sharp turns
+  * [kanarskeostrovy.com](https://www.kanarskeostrovy.com/)
+  * UTC+0, you never know
   * water is warm in December
 
 ## Lessons learnt
 
   * Sleep more before the trip if the travel begins early. Otherwise headache is
     likely and debilitating.
-  * Canyon trip
-  * Life analogy
+  * Canyon trip (you need to backtrack sometimes to get further)
+  * Life analogy (pursuing sun vs unexpected shadow)
 
 ## People
 
   * Poles at Caldera: 2 guys, 1 girl, 3 day trip just to climb Teide
   * nudists at beach
   * pair of rowers in the bay
-  * crazy Russin in Los Lajos
+  * crazy Russian in Los Lajos
   * two Czech (crew) girls at Altavista hut
   * couple from Ostrava
-  * German family at Chamorga
-  * German woman at Chamorga
-  * Czech at Tenerife airport (hoping for Vienna connection train)
+  * disoriented German family at Chamorga
+  * curious German woman at Chamorga
+  * Czechs at Tenerife airport (hoping for Vienna connection train)
+
+*Big thanks to MH for the photos.*
