Add cycling tag

--- a/_posts/2019-03-31-mallorca.md
+++ b/_posts/2019-03-31-mallorca.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Spring cycling
-tags: Spain Mallorca bicycle island travel
+tags: Spain Mallorca cycling island travel
 ---
 
 > Getting your rear wheel stuck in a tram rail in Sollér, that's Mallorca.
