--- a/_posts/2016-08-03-tdah.md
+++ b/_posts/2016-08-03-tdah.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Tour de Austria-Hungary
-tags: travel Slovakia Hungary Austria
+tags: travel Slovakia Hungary Austria cycling
 ---
 
 ## Day 00 (2016-07-24)
